--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ MONGO_URI="mongodb+srv://admin:admin@coffee-app-cluster.frir4kn.mongodb.net/coff
 
 JWT_SECRET=yourSuperSecretKey
 PORT=5001
+PORT=5001
+
+FRONTEND_URL=https://coffeewebsite-7ub4.onrender.com
+NODE_ENV=production
