--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,6 @@ JWT_SECRET=yourSuperSecretKey
 PORT=5001
 PORT=5001
 
-FRONTEND_URL=https://coffeewebsite-7ub4.onrender.com
+FRONTEND_URLS=https://coffeewebsite-7ub4.onrender.com
+
 NODE_ENV=production
