--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 # URL of the backend API (running on port 5000 by default)
 # frontend/.env
-REACT_APP_API_URL=https://coffeewebsite-7ub4.onrender.com
+REACT_APP_API_URL=https://coffeewebsite-server.onrender.com/api
 
 
 
